<resources>
    <string name="app_name">Todo_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">타이틀</string>
    <string name="nav_header_subtitle">메세지</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">권한설정</string>
    <string name="action_login">계정설정</string>

    <string name="menu_company">Company</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_map">Map</string>

    <string name="submenu_about">About</string>
    <string name="submenu_history">History</string>
    <string name="submenu_item01">SubItem01</string>
    <string name="submenu_item02">SubItem02</string>
    <string name="submenu_item03">SubItem03</string>
    <string name="submenu_item04">SubItem04</string>
    <string name="submenu_item05">SubItem05</string>
    <string name="submenu_item06">SubItem06</string>
    <string name="submenu_item07">SubItem07</string>
    <string name="submenu_item08">SubItem08</string>
    <string name="submenu_item09">SubItem09</string>
    <string name="submenu_item10">SubItem10</string>
    <string name="submenu_item11">SubItem11</string>
    <string name="submenu_item12">SubItem12</string>
    <string name="submenu_item13">SubItem13</string>
    <string name="submenu_item14">SubItem14</string>
    <string name="submenu_item15">SubItem15</string>
    <string name="submenu_item16">SubItem16</string>

    <string name="Alert_Title_Notice">알림</string>

    <string name="Alert_Button_Positive">OK</string>
    <string name="Alert_Button_Negative">Cancle</string>

    <string name="checkGPSService_ON">GPS를 켜주세요.</string>
    <string name="checkNetworkService_ON">네트워크 또는 Wifi를 켜주세요.</string>
    <string name="checkPermission_ON">권한을 허용해 주세요. \n권한설정은 상단에 있습니다.</string>
    <string name="checkPermissionLOCATION_ON">정확한 위치권한을 허용해 주세요. \n\nOK를 누루면 권한설정 화면으로 넘어갑니다.</string>

    <string name="title_location_service">위치</string>
    <string name="message_location_service">위치를 켜주세요</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>