<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_company"/>
                <item
                    android:id="@+id/sub_menu_item1"
                    android:title="@string/submenu_about" />
                <item
                    android:id="@+id/sub_menu_item2"
                    android:title="@string/submenu_history" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_map" />
    </group>

    <item
        android:title="@string/menu_company">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/sub_menu_item3"
                android:title="@string/submenu_item03" />
            <item
                android:id="@+id/sub_menu_item4"
                android:title="@string/submenu_item04" />
            <item
                android:id="@+id/sub_menu_item5"
                android:title="@string/submenu_item05" />
            <item
                android:id="@+id/sub_menu_item6"
                android:title="@string/submenu_item06" />
            <item
                android:id="@+id/sub_menu_item7"
                android:title="@string/submenu_item07" />
            <item
                android:id="@+id/sub_menu_item8"
                android:title="@string/submenu_item08" />
            <item
                android:id="@+id/sub_menu_item9"
                android:title="@string/submenu_item09" />
            <item
                android:id="@+id/sub_menu_item10"
                android:title="@string/submenu_item10" />
            <item
                android:id="@+id/sub_menu_item11"
                android:title="@string/submenu_item11" />
            <item
                android:id="@+id/sub_menu_item12"
                android:title="@string/submenu_item12" />
            <item
                android:id="@+id/sub_menu_item13"
                android:title="@string/submenu_item13" />
            <item
                android:id="@+id/sub_menu_item14"
                android:title="@string/submenu_item14" />
            <item
                android:id="@+id/sub_menu_item15"
                android:title="@string/submenu_item15" />
            <item
                android:id="@+id/sub_menu_item16"
                android:title="@string/submenu_item16" />
        </menu>
    </item>
</menu>